# rust-practice

./: Cargo.toml
src/: bench.rs  main.rs
