[package]
name = "rust-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = { version = "2.0.0-alpha.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
